Add JWT related components, updated the login and register code